[patch] hero section fix, scroll aware navbar, section spacing reduced, card size consistent, particle modifications

--- a/css/event.css
+++ b/css/event.css
@@ -1,35 +1,3 @@
-.nav-header {
-  /* background: rgba(255, 255, 255, 0.36);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4.3px);
-  -webkit-backdrop-filter: blur(4.3px);
-  border: 1px solid rgba(255, 255, 255, 0.1); */
-  position: fixed;
-  width: 100%;
-  background-color: #fff;
-  -webkit-box-shadow: 0 8px 6px -6px #999;
-  -moz-box-shadow: 0 8px 6px -6px #999;
-  box-shadow: 0 8px 6px -6px #999;
-  border-radius: 0.8rem;
-  z-index: 69;
-  top: 0;
-}
-
-@media screen and (max-width: 900px) {
-  .navbar-menu {
-    padding-bottom: 1.2rem;
-  }
-}
-
-#overview {
-  padding-top: 5rem;
-}
-
-.new {
-  padding-top: 3rem;
-}
-
 /*Bootstrap added*/
 /*!
  * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
