--- a/css/hero.css
+++ b/css/hero.css
@@ -8,7 +8,7 @@
   font-family: "Begum Sans Semi", sans-serif;
 }
 .hero__content {
-  max-width: 1200px;
+  max-width: 100vh;
   margin: 0 auto;
   padding: 0 2rem;
   text-align: center;
